--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -2,9 +2,10 @@
 {% load staticfiles %}
 
 {% block change_link %}
-    <li id="menu-item-985"
-        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-985"><a
-            href="{% url 'students:list_view' %}">Студенты</a></li>
+    <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Студенты</a></li>
+{% endblock %}
+{% block change_link_mobi %}
+    <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Студенты</a></li>
 {% endblock %}
 
 {% block banner %}
