--- a/templates/base.html
+++ b/templates/base.html
@@ -55,29 +55,34 @@
                     </div>
                 </a>
 
-
-                <ul id="menu-menu-1" class="right hide-on-med-and-down">
-                    <li id="menu-item-24"
-                        class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-24">
-                        <a href="/">Главная</a></li>
-                    <li id="menu-item-999"
-                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-999"><a
-                            href="contact.html">Контакты</a>
+                <ul id="slide-out" class="side-nav">
+                    <li>
+                        <a href="/">Главная</a>
                     </li>
-                    {% block change_link %}
-                    <li id="menu-item-985"
-                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-985"><a
-                            href="{% url 'students:list_view' %}">Студенты</a></li>
+                    <li>
+                        <a href="contact.html">Контакты</a>
+                    </li>
+                    {% block change_link_mobi %}
+                    <li>
+                        <a href="{% url 'students:list_view' %}">Студенты</a>
+                    </li>
                     {% endblock %}
                 </ul>
-                <ul id="nav-mobile" class="side-nav" style="left: -250px;">
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-24">
-                        <a href="/">Главная</a></li>
-                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-999"><a
-                            href="student_list.html">Студенты</a></li>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="/">Главная</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Контакты</a>
+                    </li>
+                    {% block change_link %}
+                    <li>
+                        <a href="{% url 'students:list_view' %}">Студенты</a>
+                    </li>
+                    {% endblock %}
                 </ul>
 
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-menu"></i></a>
+                <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
         </div>
     </nav>
@@ -148,8 +153,8 @@
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">Задайте вопрос</h5>
-
-                <form class="col s12" action="" method="post" id="contactForm">
+                <form class="col s12" action="/" method="post" id="contactForm">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-account-circle prefix white-text"></i>
@@ -207,6 +212,14 @@
 <!-- start scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="{% static 'js/materialize.min.js' %}"></script>
+<script>
+    $('.button-collapse').sideNav({
+      menuWidth: 300, // Default is 240
+      edge: 'left', // Choose the horizontal origin
+      closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+    }
+  );
+</script>
 <!--/ end scripts -->
 </body>
 </html>
