--- a/templates/contact.html
+++ b/templates/contact.html
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="panel-footer newfooter">
-    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
+    <span class="firma">ItBursa2015</span>
   </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
