--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div class="panel-footer newfooter">
-    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
+    <span class="firma">ItBursa2015</span>
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
