--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -45,7 +45,7 @@
     <tbody></br></br></br></br></br></br>
       <tr>
         <td>Birth Date</td>
-        <td>{{student.birthday}}</td>
+        <td>{{student.date_of_birth}}</td>
       </tr>
       <tr>
         <td>Address</td>
