--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -74,11 +74,19 @@
                         </tr>
                         <tr>
                             <td>курсы учитель</td>
-                            <td>{% for coach_course in coach_courses %}<a href='{% url "courses:detail" coach_course.id %}'>{{ coach_course.name }}</a> студенты курса  <a href='{% url "students:list_view" %}?course_id={{ coach_course.id }}'><span class="glyphicon glyphicon-flash"></span></a>{% endfor %}</td>
+                            <td> {% for course in courses %}
+                            <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> Course students
+                            <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                            <span class="glyphicon glyphicon-flash" aria-hidden="true"></span></a><br>
+                        {% endfor %}</td>
                         </tr>
                         <tr>
                             <td>курсы ассистент</td>
-                            <td>{% for assistant_course in assistant_courses %}{{ assistant_course.name }}{% endfor %}</td>
+                            <td>{% for assistant in assistants %}
+                            <a href="{% url 'courses:detail' assistant.id %}">{{ assistant.name }}</a> Course students 
+                            <a href="{% url 'students:list_view' %}?course_id={{ assistant.id }}">
+                            <span class="glyphicon glyphicon-flash" aria-hidden="true"></span></a><br>
+                        {% endfor %}</td>
                         </tr>
                         
                     </tbody>
