--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 
                 <ul id="slide-out" class="side-nav">
                     <li>
-                        <a href="/">Главная</a>
+                        <a href="{% url 'list_view' %}">Главная</a>
                     </li>
                     <li>
                         <a href="{% url 'contact' %}">Контакты</a>
