--- a/templates/index.html
+++ b/templates/index.html
@@ -39,12 +39,13 @@
   <div class="container"></br></br></br></br></br>
     <div class="jumbotron">
           <h1>PyBursa</h1>
-          <p>Наша цель - научить вас языку Python</p>
+          <h3>Organization description:</h3>
           <p>Научись или умри. Мы построили курсы с акцентом на практику</p>
         </div>
-    <div class="table-responsive">
-          <table class="table table-hover">
-            <caption>What do you want to know?</caption>
+      <div class="container">
+        <h3>Courses Program</h3>
+        <br>
+          <table class="table">
             <thead>
               <tr>
                 <th>Course</th>
@@ -52,17 +53,16 @@
               </tr>
             </thead>
             <tbody>
-                  {% for course in courses %}
-                    <tr>
-                      <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-                      <td>{{ course.short_description }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
+              {% for course in courses %}
+                <tr>
+                  <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                  <td>{{ course.short_description }}</td>
+                </tr>
+              {% endfor %}
             </tbody>
           </table>
-        </div>
-      </div>
+        </br>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
