--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,10 +23,10 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a></li>
-                <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'student_list' %}">Students</a><li>
-              </ul>
+            <li><a href="{% url 'index' %}">Main</a><li>
+            <li class="active"><a href="{% url 'contact' %}">Contacts</a><li>
+            <li><a href="{% url 'students:list_view' %}">Students</a><li>
+          </ul>
             </div>
           </div>
         </nav>
