--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <!-- saved from url=(0054)http://getbootstrap.com/examples/sticky-footer-navbar/ -->
 <html lang="en">
@@ -8,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Practical excercise">
+    <meta name="author" content="Sergey Podlipenskiy">
     <link rel="icon" href="{% static 'images/Other-python.ico' %}">
     <title>PyBursa: Main page</title>
     <!-- Bootstrap core CSS -->
@@ -37,13 +38,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
+          <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -51,8 +53,10 @@
     </nav>
     <!-- Begin page content -->
     <div class="container">
+      <div class="page-header">
         <h1>Технополис</h1>
-      <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
+      </div>
+      <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
       <br>
@@ -62,14 +66,14 @@
         <table class="table table-bordered table-condensed">
           <thead>
             <tr>
-              <th>Курс</th>
-              <th>Описание</th>
+              <th class="text-center">Курс</th>
+              <th class="text-center">Описание</th>
             </tr>
           </thead>
           <tbody>
             {% for course in courses %}
               <tr>
-                <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
                 <td>{{ course.short_description }}</td>
                 <tr>
                 {% endfor %}
