--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,7 @@
             <a href="{% url 'index' %}">Main</a>
           </li>
           <li role="presentation" class="text-center">
-            <a href="{% url 'student_list' %}">Students</a>
+            <a href="{% url 'students:list_view'%}">Students</a>
           </li>
           <li role="presentation" class="text-right">
             <a href="{% url 'contact' %}">Contacts</a>
