--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -25,7 +25,7 @@
 
           </li>
           <li role="presentation">
-            <a href="{% url 'students:list_view'%}">Students</a>
+            <a href="{% url 'students:list_view'%}?course_id={{course.id}}">Students</a>
           </li>
           <li role="presentation">
             <a href="{% url 'contact' %}">Contacts</a>
@@ -39,36 +39,35 @@
     </div>
     <div class="jumbotron">
       <div class="text-center">
-        <h1>PyBursa</h1>
-        <h4>Description</h4>
+
+        <h1>{{ course.name }}</h1>
+
       </div>
-      <p class="lead">The course starts by overviewing Python, and then goes on
-      to study Python's collections - Lists, Tuples and Dictionaries etc. We
-      introduce the development environments and other resources available, and
-      take a look with practical exercises at test procedures and good code
-      design.</p>
+      <p class="lead">{{ course.description }}</p>
     </div>
     <div class="row marketing">
       <div class="col-lg-6">
-        <p><h2 class="text-center">Courses:</h2></p>
+        <p><h2 class="text-center">Course plan:</h2></p>
       </div>
 
 
       <div class="col-lg-6">
             <table>
             <tr class="table_head dark_grey_row">
-            <td>Course</td>
-            <td>Short description</td>
+            <td>#</td>
+            <td>Theme</td>
+            <td>Description</td>
             </tr>
 
-            {% for course in courses %}
+{% for lesson in lessons %}
 
             <tr>
-            <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
-            <td><p>{{ course.short_description }}</p></td>
+            <td>{{ lesson.order }}</td>
+            <td><a href="">{{ lesson.subject }}</a></td>
+            <td><p>{{ lesson.description }}</p></td>
             </tr>
 
-             {% endfor %}
+            {% endfor %}
             </table>
       </div>
 
