--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -23,8 +23,8 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a></li>
-                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'courses:index' %}">Main</a><li>
+                <li><a href="{% url 'contact' %}">Contacts</a><li>
                 <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
                 <li><a href="{% url 'results' %}">Results</a><li>
               </ul>
