--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,17 +5,19 @@
      
     
     <title>Bursa: contacts</title>
+        {% load staticfiles %}
     <style>
       body {
-      background-image: url(../static/images/13.jpg) ; /* Путь к фоновому изображению */
+      background-image: url({% static 'images/13.jpg'%}) ; /* Путь к фоновому изображению */
       background-color: #c7b39b; /* Цвет фона */
       }
     </style>
     
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     
-    
-    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
 
     
   </head>
@@ -27,12 +29,15 @@
         <nav>
           
             <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
-              <li role="presentation"><a href="student_list.html">Students </a></li>
+              <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
+              <li role="presentation" class="active"><a href="{% url 'contact' %}"> Contacts</a></li>
+              <li role="presentation"><a href="{% url 'students:list_view' %}"> Students</a></li>
             </ul>
           
         </nav>
+        <h2 >PyBursa </h2>
+      </div>
+    </div>
         <h1 class="text-muted"><b>Contacts</b></h1>
       </div>
     </div>
