--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,18 @@
     
 
     <title>Bursa: main</title>
+        {% load staticfiles %}
     <style>
       body {
-      background-image: url(../static/images/13.jpg) ; /* Путь к фоновому изображению */
+      background-image: url({% static 'images/13.jpg'%}) ; /* Путь к фоновому изображению */
       background-color: #c7b39b; /* Цвет фона */
       }
     </style>
     
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     
-    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     
   </head>
@@ -30,15 +31,16 @@
         <nav>
           
             <ul class="nav nav-pills pull-right">
-              <li role="presentation" class="active"><a href="index.html">Main</a></li>
-              <li role="presentation"><a href="contact.html"> Contacts</a></li>
-              <li role="presentation"><a href="student_list.html"> Students</a></li>
+              <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
+              <li role="presentation"><a href="{% url 'contact' %}"> Contacts</a></li>
+              <li role="presentation"><a href="{% url 'students:list_view' %}"> Students</a></li>
             </ul>
           
         </nav>
         <h2 >PyBursa </h2>
       </div>
     </div>
+  
     <div class= "container">
       <div class="jumbotron">
       
@@ -66,22 +68,30 @@
           <br>
         
         </div>
-            <p><a class="btn btn-lg btn-success" href="contact.html" role="button">Связаться с нами</a></p>
-
+            
     <div class= "container">
       <div class="jumbotron">
       
-        <h2>"Как говорили древние латиняне: то что один человек сделал, другой завсегда сломать может!"</h2>
-          
-        <div class="floatright">
-          <p>Lorem ipsum dolor sit amet, maiorum blandit signiferumque quo an, his autem tation quaeque at, nam eruditi nominati forensibus an. Eum ne admodum invenire quaerendum, nam ne simul appellantur. Ocurreret imperdiet patrioque mei an, sea ne impedit civibus. Iriure indoctum pertinacia in eos. Vis id mundi tritani. Ea vel integre partiendo iudicabit.
-
-          Iracundia persequeris eam te, eligendi placerat explicari et vel. Cu veritus singulis eos, dicit munere scripserit eu mel, pro utinam ridens ex. Corpora voluptua adolescens te duo, ius et impedit vivendo sensibus. Suavitate prodesset nec an, eius consul legendos mea ne, persius indoctum ad ius. Mea te paulo corpora efficiantur. In vel clita meliore menandri, mei et graeci vocent posidonium.
-
+        <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Курс</th>
+                        <th>Описание</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+          {% for i in course %}
+                    <tr>
+                    <td><a href="{% url 'courses:detail' i.id %}">{{ i }}</a></td>
+          <td>{{ i.short_description }}</td>
+          </tr>
+          {% endfor %}
+                    </tbody>
+                  </table>
           </p>
           <br>
           <br>
-        
+        <p><a class="btn btn-lg btn-success" href="{% url 'contact' %}" role="button">Связаться с нами</a></p>
         
     
           </div>
@@ -89,17 +99,7 @@
       </div>
     </div> 
 
-  <div class="hide">
-      <ul class="list-group">
-        <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
-        <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
-        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
-        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
-      </ul>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-
+ 
   
   </body>
 </html>
