--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,10 +25,10 @@
             "collapse" type="button"><span class="sr-only">Toggle
           navigation</span> <span class="icon-bar"></span> <span class=
             "icon-bar"></span> <span class="icon-bar"></span></button>
-          <a class="navbar-brand" href="{% url 'index' %}">Main</a>
-          <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
-          <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
-          <a class="navbar-brand" href="{% url 'quadratic_start' %}">QE</a>
+          <a href="{% url 'index' %}">Main</a>
+          <a href="{% url 'contact' %}">Contacts</a>
+          <a href="{% url 'students:list_view' %}">Students</a>
+          <a href="{% url 'quadratic_start' %}">QE</a>
         </div>
       </div>
     </nav>
