--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -62,7 +62,7 @@
           </tr>
           <tr>
           <tr>
-          <td>Адрес</td><td>{{ student.adress }}</td>
+          <td>Адрес</td><td>{{ student.address }}</td>
           </tr>
           <tr>
           <td>Почта</td><td>{{ student.email }}</td>
