--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -68,7 +68,7 @@
                     <tr>
                     <td>{{ i.id }}</td>
                     <td><a href="{% url 'students:detail' i.id %}">{{ i.surname }} {{ i.name }}</a></td>
-                    <td>{{ i.adress }}</td>
+                    <td>{{ i.address }}</td>
                     <td>{{ i.skype }}</td>
                     <td>{% for k in i.courses.all %}<a href="{% url 'courses:detail' k.id %}">{{ k.name }}</a><br>{% endfor %}</td>
           
