--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
           </ul>
@@ -55,24 +55,24 @@
       <div class="page-header">
         <h1>Технополис</h1>
       </div>
-      <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
+      <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
       <br>
       <h2>Самые популярные курсы</h2>
       <br>
       <div class="table-responsive">
-        <table class="table table-condensed">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
-              <th>Курс</th>
-              <th>Описание</th>
+              <th class="text-center">Курс</th>
+              <th class="text-center">Описание</th>
             </tr>
           </thead>
           <tbody>
             {% for course in courses %}
               <tr>
-                <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
                 <td>{{ course.short_description }}</td>
                 <tr>
                 {% endfor %}
