added two app (students and courses)

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
 	    <link rel="stylesheet" href="{% static "css/section.css" %}">
 	    <link rel="stylesheet" href="{% static "css/about.css" %}">
-	    <link rel="stylesheet" href="{% static "css/style.css" %}">
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -81,8 +80,7 @@
 					<div class="team-item">
 						<img src="{% static "images/team-1.png" %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
-						</h4>
-						<h4 class="team-item-id">
+							Founder
 						</h4>
 						<ul class="team-item-name-2">
 							<li>Name: David Martin</li>
@@ -97,9 +95,6 @@
 					<div class="team-item">
 						<img src="{% static "images/team-2.png" %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
-							Founder
-						</h4>
-						<h4 class="team-item-id">
 							Manager
 						</h4>
 						<ul class="team-item-name-2">
@@ -114,8 +109,6 @@
 					<div class="team-item">
 						<img src="{% static "images/team-3.png" %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
-						</h4>
-						<h4 class="team-item-id">
 							Director
 						</h4>
 						<ul class="team-item-name-2">
@@ -130,9 +123,7 @@
 					<div class="team-item">
 						<img src="{% static "images/team-4.png" %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
-						</h4>
-						<h4 class="team-item-id">
-							co-founder
+							Co-Founder
 						</h4>
 						<ul class="team-item-name-2">
 							<li>Name: Jenifer White</li>
