--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,9 @@
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>PyBursa</title>
-		
-	    <link rel="stylesheet" href="{% static "css/section.css" %}">
+
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-	    <link rel="stylesheet" href="{% static "css/style.css" %}">
+	    <link rel="stylesheet" href="{% static "css/section.css" %}">
 	    <link rel="stylesheet" href="{% static "css/one-page.css" %}">
 
 
@@ -62,7 +61,7 @@
 			<div class="header-table">
 				<div class="header-wrapper">
 					<h1 class="header-title">
-						PyBursa - best python courses
+						PyBursa - python courses
 					</h1>
 					<p class="header-subtitle">
 						since 2013
