--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
             <li class="active"><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
         <!--/.nav-collapse -->
