--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
       <br>
-      <h2>Самые популярные курсы</h2>
+      <h2>Популярные курсы</h2>
       <br>
       <div class="table-responsive">
         <table class="table table-bordered table-condensed">
@@ -73,7 +73,7 @@
           <tbody>
             {% for course in courses %}
               <tr>
-                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
                 <td>{{ course.short_description }}</td>
                 <tr>
                 {% endfor %}
