--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -40,7 +40,7 @@
         <h1 class="center">Students list</h1>
     </div>
     <table class="table">
-        <caption>Студенты курса</caption>
+        <caption>students</caption>
         <tr>
             <th>N</th>
             <th>name surname</th>
