--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -22,23 +22,34 @@
           <ul class="nav nav-pills pull-right">
             <li class="active"><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li><a href="{% url 'students:list_view' %}{{id_c}}">Students</a></li>
+	<li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </nav>
         
       </div>
     
-<h1>{{course.name}}</h1> 
-<p class="lead">{{course.description}} </p>
-      <div class="jumbotron">
-<h3>План курса</h3> 
 
-<table>
- <tr>  <th># </th> <th>Тема </th> <th>Описание</th> </tr>
-    	{% for lesson in name_lesson %} 
-	 <tr> <td>{{lesson.order}}  </td> <td>{{lesson.subject}}  </td>  <td>{{lesson.description}} </td></tr>
-	{% endfor %}
-      </div>
+      <div class="jumbotron">
+<h3>{{name_student.name}} {{name_student.surname}}</h3> 
+
+<table class="table">
+
+ <tr>  <th>дата рождения </th> <br> <th>{{name_student.date_of_birth }}</th></tr>
+ <tr>  <th>адрес </th> <br> <th>{{name_student.adress }}</th></tr>
+ <tr>  <th>почта </th> <br> <th>{{name_student.email }}</th></tr>
+ <tr>  <th>skype </th> <br> <th>{{name_student.skype }}</th></tr>
+ <tr>  <th>телефон </th> <br> <th>{{name_student.phone }}</th></tr>
+
+<tr>
+<td>курсы</td>
+<table  class="table" >
+{% for course in name_student.courses.all %}
+<td>
+<a href="{% url 'courses:detail' course.id %}">{{course}}</a>
+</td>
+{% endfor %}
+</table>
+</tr>
 </table>
       <footer class="footer">
        
