--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -20,26 +20,45 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="/">Main</a></li>
+            <li><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-	<li><a href="{% url 'students:list_view' %}{{id_c}}">Students</a></li>
+	<li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </nav>
         
       </div>
     
-<h1>{{course.name}}</h1> 
-<p class="lead">{{course.description}} </p>
-      <div class="jumbotron">
-<h3>План курса</h3> 
 
-<table>
- <tr>  <th># </th> <th>Тема </th> <th>Описание</th> </tr>
-    	{% for lesson in name_lesson %} 
-	 <tr> <td>{{lesson.order}}  </td> <td>{{lesson.subject}}  </td>  <td>{{lesson.description}} </td></tr>
-	{% endfor %}
-      </div>
+
+
+
+      <div class="jumbotron">
+<h3>Список студентов</h3> 
+
+ <table  class="table" >
+ <tr><th>#</th><th>Фамилия имя</th><th>Адрес</th><th>Skype</th><th>Курсы</th></tr> 
+{% for i in name_stud %}
+
+<td>{{i.id}}</td>
+<td><a href="{% url 'students:detail' i.id %}">{{i.name}} {{i.surname}}</a></td>
+<td>{{i.adress}}</td>
+<td>{{i.skype}}</td>
+
+<td>
+<table  class="table" >
+{% for course in i.courses.all %}
+<tr><td>
+<a href="{% url 'courses:detail' course.id %}">{{course}}</a>
+</td></tr>
+{% endfor %}
 </table>
+</td>
+
+
+ </tr>
+{% endfor %}
+  </table>
+
       <footer class="footer">
        
       </footer>
