--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/">Main</a></li>
-            <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-	<li role="presentation" ><a href="{% url 'student_list' %}">Students</a></li>
+            <li class="active"><a href="/">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+	<li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </nav>
         
