--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -23,21 +23,23 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index_course' %}">
+        <div class="navbar-header navbar-brand">
+          <a href="{% url 'course' %}">
             <img class="logo" alt="logo" src="{% static 'images/logo_itbursa.png' %}">
           </a>
         </div>
           <ul class="nav nav-pills">
-            <li role="presentation" class="active"><a href="{% url 'index_course' %}">Главная</a></li>
+            <li role="presentation" class="active"><a href="{% url 'course' %}">Главная</a></li>
             <li role="presentation" class="passive"><a href="{% url 'contact' %}">Контакты</a></li>
-            <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}?course_id={{course.id}}">Студенты</a></li>
+            <li role="presentation" class="passive"><a href="{% url 'students:list_view' %}?course_id={{course.id}}">Студенты</a></li>
           </ul>
       </div>
       <div class="col-md-12" >
-        <div class="jumbotron">
+        <div class="page-header">
           <h1>{{course.name}}</h1>
-          <p>{{course.short_description}}</p>
+        </div>
+        <div class="jumbotron">
+          <p>{{course.description}}</p>
         </div>
       </div>
       <div class="container-fluid">
@@ -48,7 +50,7 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Курс</th>
+              <th>Тема</th>
               <th>Описание</th>
             </tr>
           </thead>
