--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -23,13 +23,13 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index_course' %}">
+        <div class="navbar-header navbar-brand">
+          <a href="{% url 'course' %}">
             <img class="logo" alt="logo" src="{% static 'images/logo_itbursa.png' %}">
           </a>
         </div>
           <ul class="nav nav-pills">
-            <li role="presentation" class="active"><a href="{% url 'index_course' %}">Главная</a></li>
+            <li role="presentation" class="active"><a href="{% url 'course' %}">Главная</a></li>
             <li role="presentation" class="passive"><a href="{% url 'contact' %}">Контакты</a></li>
             <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}">Студенты</a></li>
           </ul>
