--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -22,9 +22,9 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/">Main</a></li>
-            <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-	<li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="/">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+	<li><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
         
