--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -31,7 +31,7 @@
             <ul class="nav nav-pills pull-right">
               <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
               <li role="presentation"><a href="{% url 'contact' %}"> Contacts</a></li>
-              <li role="presentation"><a href="{% url 'students:list_view' %}"> Students</a></li>
+              <li role="presentation"><a href="{% url 'students:list_view' %}?course_id={{course_id}}"> Students</a></li>
             </ul>
           
         </nav>
